   > Blood Boost: Magic skill learned at level 22.
   > Magical Breeze: Magic skill learned at level 23.
  ~ Player 3, 4 skills:
   > Group Heal: Magic skill learned at level 17 (replaces Blood Boost).
   > Curify: Magic skill learned at level 22.
   > [P] Clear Mind: Passive skill learned at level 23.
   > Resurgence: Magic skill learned at level 25.
  ~ Player 4, 0 skills:
   > 
 - Added 31 new items:
  ~ 2 recovery items:
   > Water Jug
   > Tomato
  ~ 13 materials:
   > Thick-Skinned Herb
   > Turtle Scute
   > Ice Cube
   > Blank Tome
   > Tellurium Dust
   > Tellurium Alloy
   > Life Orb
   > Mana Orb
   > Mysterious Yellow Badge
   > Knight/Mage/Cleric/Rogue Token
  ~ 11 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
  ~ 5 miscellaneous items:
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)
   > Golden Tablet
   > Tellurium Pickaxe
   > Andrew's Ancient Crystal of The Trail's Amazing History
 - Added 50 new equipment items:
  ~ 10 weapons:
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Hero Sword Replica
   > Tellurium Wand
   > Life Crystal Staff
   > Mana Crystal Staff
   > Bloodlust ★★
  ~ 7 shields:
   > Immovable Object
   > Turtle Shield
   > Tellurian Knight's Shield
   > Tellurian Knight's Bulwark
   > Vishnu's Shield
   > Vishnu's Aegis
   > Glacial Bulwark
  ~ 4 bodygear:
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Prayer Vestments
   > True Shadowspec Leathers
  ~ 2 headgear:
   > Dapper-Looking Hat
   > Bunny Hood
  ~ 6 footgear:
   > Hiking Boots ★★
   > Flower Boots
   > Padded Boots
   > Snow Boots
   > Trailblazing Boots
   > Trailblazing Boots ★
  ~ 9 accessories:
   > Vigilante's Charm
   > Phoenix Bracelet
   > Broken Phoenix Bracelet
   > Giant Turtle Shell
   > Cloth Mask
   > Storm Lens