@@ -28,8 +28,10 @@ Additions:
    > Resurgence: Magic skill learned at level 25.
   ~ Player 4, 0 skills:
    > 
- - Added 31 new items:
-  ~ 2 recovery items:
+ - Added 33 new items:
+  ~ 4 recovery items:
+   > Large Potion
+   > Large Elixir
    > Water Jug
    > Tomato
   ~ 13 materials:
